# histo_pdbe_fetch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: PLAN.md
skills/histo-pdbe-fetch/: SKILL.md
src/histo_pdbe_fetch/: __init__.py  chain_remapper.py  cli.py  core.py  http.py
src/histo_pdbe_fetch/schema/: assembly.schema.json
src/histo_pdbe_fetch/sources/: pdbe.py
tests/: test_cli.py  test_core.py  test_pdbe.py
tests/fixtures/pdbe/: 1ao7-assembly1.json  1ao7-assembly2.json  1bak-assembly1.json
