[project]
name = "histo-pdbe-fetch"
version = "0.1.0"
description = "Fetch biological unit assembly metadata from PDBe and organize by PDB and assembly id"
readme = "README.md"
authors = [
    { name = "Chris Thorpe", email = "33100149+drchristhorpe@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "rich>=13.0",
]

[project.scripts]
histo-pdbe-fetch = "histo_pdbe_fetch.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.0",
]
